# MCP

./: .gitignore  COMPLETE_README.md  COMPREHENSIVE_ANALYSIS.md  FINAL_SUMMARY.md  GPIO_SWAGGER_JSON_EXAMPLES.md  MCP_GPIO_TOOLS_SUMMARY.md  MCP_SERVER_README.md  MCP_SSH_SETUP.md  QUICK_START.md  README.md  SSH_EXEC_ERROR_EXPLANATION.md  SWAGGER_UI_ENHANCEMENTS.md  claude.json  claude_desktop_config.json  claude_desktop_config_complete.json  config.json  demo.db  dev_tools_mcp_server.py  docker-compose-local-ollama.yml  docker-compose-simple.yml  docker-compose.yml  dockerfile  fastmcp_quickstart.py  file_mcp_server.py  makefile  mcp_server.py  mcp_server_database.py  openapi_spec.json  openwebui_functions.json  openwebui_functions_config.json  openwebui_integration.py  pyproject.toml  qabot.py  raspberry pi _mcp.md  requirements.txt  run_mcp_with_openwebui.py  server.py  start_server.py  test_cors_openapi.py  test_git_tools_mcp.py  (+11 more)
config/: hosts.example.yaml  policies.example.yaml  policies.yaml
mcp_server/: __init__.py  allowlist.py  config.py  dev_tools_mcp_server.py  logging_setup.py  main.py  mcp_complete_server.py  mcp_ssh_server.py  security.py  ssh_transport.py
mcp_server/config/: hosts.yaml
mcp_server/tools/: __init__.py  common.py  django.py  git_tools.py  gpio_tools.py  scp_get.py  scp_put.py  ssh_exec.py  ssh_transport.py  systemd.py  tmux.py
scripts/: dev_run.sh
